# a2a_demo

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
src/: agent_a_manager.py  agent_b_worker.py  agent_c_worker.py  agent_d_worker.py  terminal_client.py
web/: index.html  package-lock.json  package.json  vite.config.js
web/src/: AgentGraph.jsx  App.css  App.jsx  a2aClient.js  a2aClient.test.js
